# BOSSVeloxEngine

./: CMakeLists.txt  Readme.org
Benchmarks/: VeloxBenchmarks.cpp
Modified-velox-src/: Arithmetic.h  ArithmeticFunctionsRegistration.cpp  ArithmeticImpl.h  CMakeLists.txt  PlanBuilder.cpp
Source/: BOSSCoreTmp.h  BOSSQueryBuilder.cpp  BOSSQueryBuilder.h  BOSSVeloxEngine.cpp  BOSSVeloxEngine.hpp  BossConnector.cpp  BossConnector.h  BossConnectorSplit.h  BridgeVelox.cpp  BridgeVelox.h  CommonUtilities.h  VectorBridge.cpp  VectorBridge.h
Tests/: BOSSTests.cpp
